# FEEDBACK-MANAGEMENT-SYSTEM

./: CMakeLists.txt  FeedbackSystem.cpp  FeedbackSystem.h  UserSystem.cpp  UserSystem.h  allfeedbackwindow.h  dashboard.html  feedback.txt  main.cpp  mainwindow.cpp  mainwindow.ui  negativefeedbackwindow.cpp  negativefeedbackwindow.h  negativefeedbackwindow.ui  users.txt
QT FILES/: CMakeLists.txt  allfeedbackwindow.cpp  allfeedbackwindow.ui  mainwindow.cpp  mainwindow.h
SOURCE CODE/: CMakeLists.txt  allfeedbackwindow.cpp  allfeedbackwindow.h  allfeedbackwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  negativefeedbackwindow.cpp  negativefeedbackwindow.h  negativefeedbackwindow.ui
project/dashboard/: package-lock.json
